--- a/_posts/2016-11-23-javanew.md
+++ b/_posts/2016-11-23-javanew.md
@@ -6,7 +6,7 @@ description: Java的新特性
 keywords: Java, 新特性
 ---
 
-## Java的新特性
+## 你知道Java的新特性吗？
 
 Java的新特性这个问题，在面试时没什么可问的时候很可能会被问到，对于每一个版本新特性我们要做到心中有数，最好能做到对号入座，以体现开发人员的严谨性。虽然目前许多新特性用不到，但能够说出最新版（JDK8）的新特性并简单描述，说明你能够与时俱进，能让面试官眼前一亮，对于这次面试也绝对是锦上添花。在平时的工作交流中，新特性也经常会是大家的话题，你也不希望只有你一个人傻坐那听天书吧，哈哈
 
