--- a/_posts/2016-12-03-oom.md
+++ b/_posts/2016-12-03-oom.md
@@ -6,8 +6,11 @@ description: 记一次OOM排查实践
 keywords: Java, oom, Out Of Memory
 ---
 
+## 排查oom之旅
+
 ### 1.引子
 
+OOM是Java开发者最不想看到的，但要勇敢面对它，解决它。最重要的是吃一堑长一智哦，跟oom说Bye-bye
 我们线上某系统，每隔几天就会停机，接手调查此事，通过描述看来像是oom引起的，接下来进入排查oom之旅
 
 ### 2.用到的工具
