--- a/_posts/2016-12-11-postman.md
+++ b/_posts/2016-12-11-postman.md
@@ -106,3 +106,14 @@ postman.setEnvironmentVariable("timestamp", new Date().getTime());
 ### 5.2 生成http请求代码
 如下图所示
 ![code](http://ogqrbglrc.bkt.clouddn.com/blog/postman/code.png)
+
+## 6.与另一神器DHC的对比
+以下对比为个人观点，仅供参考：
+
+* Postman入门比DHC相对较为容易一些，DHC很多按键隐藏较深
+* Postman界面比较直观，DHC相对复杂一些
+* DHC的Test(ASSERTION)直接配置即可，Postman需要一些简单的code。
+* DHC的Test(ASSERTION)可校验的项比Postman少，比如响应时间
+* DHC采用 Poject/Service/Scenario/Request多级分层，而Postman只有Collection/Request两级分层
+* 一键测试，DHC可通过点击Scenario上的 ``Run Scenario`` 按钮进行批量请求测试，Postman 可通过 ``Collection Runner`` 批量测试。但是DHC的Scenario只允许建1个，创建第二个时提示收费，Postman的Collection可无限创建
+* Postman收费的点在于Team协作上，个人使用不收费。DHC收费的点包括 Scenario创建、插件和Team协作上。
