--- a/_posts/2016-12-03-oom.md
+++ b/_posts/2016-12-03-oom.md
@@ -11,6 +11,7 @@ keywords: Java, oom, Out Of Memory
 ### 1.引子
 
 OOM是Java开发者最不想看到的，但要勇敢面对它，解决它。最重要的是吃一堑长一智哦，跟oom说Bye-bye
+
 我们线上某系统，每隔几天就会停机，接手调查此事，通过描述看来像是oom引起的，接下来进入排查oom之旅
 
 ### 2.用到的工具
@@ -165,8 +166,8 @@ Jprofiler分析完后如下所示：
 
 ##### 分析：
 
-从上两图可看出所有的Dao对象都是【大对象】，而且主要是被Dao里成员变量em（EntityManagerImpl）占了大部分空间，从对象数目量大的 char[]、TimeStamp、String、Integer也可以印证有大量的数据库的数据类型占据了大量的空间
+从上两图可看出所有的Dao对象都是【大对象】，而且主要是被Dao里成员变量em（EntityManagerImpl）占了大部分空间，从对象数目量大的 char[]、TimeStamp、String、Integer也可以印证有大量的数据库的数据类型对象占据了大量的空间
 
 ##### 结论：
 
-EntityManager是JPA接口，顾名思义是Entity的Manager，我们通过EntityManager进行DB的CRUD操作，因为我们用HBase，所以没有类似于mysql的hibernate或mybatis等通用的框架来帮我们做数据库操作的管理，只能是我们自己管理，但是没管理好，大量的Entity没有被清理
+EntityManager是JPA接口，顾名思义是Entity的Manager，我们通过EntityManager进行DB的CRUD操作，因为我们用HBase，所以没有类似于mysql的hibernate或mybatis等通用的框架来帮我们做数据库操作的管理，只能是我们自己管理。但是没管理好，大量的Entity没有被清理。应该在EntityManager使用完后对它进行close操作，类似IO最后的关闭流，否则极易造成OOM，影响线上业务。
