--- a/_posts/2016-12-11-postman.md
+++ b/_posts/2016-12-11-postman.md
@@ -107,6 +107,12 @@ postman.setEnvironmentVariable("timestamp", new Date().getTime());
 如下图所示
 ![code](http://ogqrbglrc.bkt.clouddn.com/blog/postman/code.png)
 
+### 5.3 我要测试跳转，How？
+我们有很多api会根据条件返回302跳转，Postman默认会自动跳转并返回200，这会影响我们的测试。可以如下图操作来关闭这种默认行为，只需把 **Automatically follow redirects** 置为 No 即可。
+![redirect](http://ogqrbglrc.bkt.clouddn.com/blog/postman/redirect.png)
+下边这个测试用例验证了返回状态码为302，且确认了跳转地址
+![redirect_tes1](http://ogqrbglrc.bkt.clouddn.com/blog/postman/redirect_test.png)
+
 ## 6.与另一神器DHC的对比
 以下对比为个人观点，仅供参考：
 
