--- a/_posts/2017-02-25-logback.md
+++ b/_posts/2017-02-25-logback.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 深入分析和理解Logback
-categories: java
+categories: Java
 description: Logback企业级应用
 keywords: Java, Logback
 ---
@@ -16,33 +16,52 @@ keywords: Java, Logback
 Java日志包括大家熟知的log4j, java.util.logging, 还有本文所讲的logback
 
 ### 1.3 是的，Logback就是你了！
-#### 更快的实现
+
+1. 更快的实现
+
 logback和log4j都是同一作者。logback重构了日志实现，它比log4j性能高将近10倍，并有更少的内存占用
-#### 大量的测试
+
+2. 大量的测试
+
 logback在开发过程中经过大量的测试，覆盖到各种复杂的场景
-#### 天然支持SLF4J
+
+3. 天然支持SLF4J
+
 logback中的Logger类直接实现了SLF4J的api，项目中只需显式调用SLF4J的接口，如果将来有更好的实现，只需却换实现Jar包即可
-#### 大量的文档
+
+4. 大量的文档
+
 logback附带详细的文档，文档到目前为止在不断的更新
-#### 配置文件支持 ``XML``或``Groovy``
+
+5. 配置文件支持 ``XML``或``Groovy``
+
 logback支持传统的XML配置，在0.9.22版本后开始支持``Groovy-style``的配置
-#### 自动加载配置文件
 
-    ```xml
-    <configuration scan="true" scanPeriod="30 seconds" > 
-      ...
-    </configuration> 
-    ```
+6. 自动加载配置文件
 
-#### 从I/O故障中优雅的恢复
+   ```xml
+   <configuration scan="true" scanPeriod="30 seconds" > 
+     ...
+   </configuration> 
+   ```
+
+7. 从I/O故障中优雅的恢复
+
 FileAppender和它的子类可以优雅地从I/O错误中恢复。所以，当logback所依赖的文件服务器宕机恢复后，无需重启应用服务器，logback会迅速从上一次错误中恢复
-#### 自动清除旧的日志归档文件
+
+8. 自动清除旧的日志归档文件
+
 TimeBasedRollingPolicy中maxHistory属性
-#### 自动压缩归档日志文件
+
+9. 自动压缩归档日志文件
+
 RollingFileAppender在文件滚动的过程中自动压缩, 而且压缩也是异步进行的，不会阻塞引用
-#### 配置文件中的条件处理
+
+10. 配置文件中的条件处理
 支持如<if>,<then>和<else>等条件处理标签，可根据不同的环境变量采用不同的日志配置
-#### 过滤
+
+11. 过滤
+
 logback拥有强大的过滤能力，具体查看各个*Filter类
 
 ## 2.Logback一图通
@@ -54,7 +73,7 @@ logback拥有强大的过滤能力，具体查看各个*Filter类
 ### 3.1 AsyncAppender中的neverBlock
 异步Appender中采用了阻塞队列，该参数的具体作用为如下所以
 
-    ```java
+   ```java
     private void put(E eventObject) {
         if (neverBlock) {
             blockingQueue.offer(eventObject);
@@ -68,6 +87,6 @@ logback拥有强大的过滤能力，具体查看各个*Filter类
             }
         }
     } 
-    ```
+   ```  
 
 这里其实就是阻塞队列的offer与put的区别问题，如果大家对此还有些模糊，建议直接看阻塞队列源码
