Logback maxHistory & totalSizeCap

--- a/_posts/2017-02-25-logback.md
+++ b/_posts/2017-02-25-logback.md
@@ -70,7 +70,7 @@ keywords: Java, Logback
    一张脑图更直观更系统地理解logback
 [![Logback脑图](http://images.aoaojava.com/blog/logback.png)](http://images.aoaojava.com/blog/logback.png)
 
-## 3. Logback源码分析
+## 3. Logback深入分析
    通过上图可以大体理解logback的整体结构，以下对一些点进行源码级的深入分析，如果有新的点会长期更新。
 ### 3.1 AsyncAppender中的neverBlock
    异步Appender中采用了阻塞队列，该参数的具体作用源码为如下所示：
@@ -92,3 +92,82 @@ private void put(E eventObject) {
 ```  
 
    这里其实就是阻塞队列的offer与put的区别问题，如果大家对此还有些模糊，建议直接看阻塞队列源码。
+
+### 3.2 TimeBasedRollingPolicy自动删除过期归档文件
+
+```xml
+    <appender name="RollingFile" class="ch.qos.logback.core.rolling.RollingFileAppender">
+        <File>${aoao.logback.logfile}</File>
+        <encoder>
+            <pattern>[%-5p] [%d{yyyy-MM-dd HH:mm:ss}] [%t] [%C{1}:%M:%L] %m%n</pattern>
+        </encoder>
+        <filter class="ch.qos.logback.classic.filter.ThresholdFilter">
+            <level>DEBUG</level>
+        </filter>
+        <rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
+            <fileNamePattern>${aoao.logback.logfile}.%d{yyyy-MM-dd_HH_mm}</fileNamePattern>
+            <maxHistory>2</maxHistory>
+            <totalSizeCap>3GB</totalSizeCap>
+        </rollingPolicy>
+    </appender>
+```
+目前日志基本上都用基于时间的滚动策略，``maxHistory`` 属性会保留一定数量的历史日志文件，而其数量是基于滚动策略的最低时间单元。``totalSizeCap`` 属性是日志文件总量大小的最大阈值，所有该Pattern下的日志文件的总大小超过此值就会被强制清理。
+
+请看源码：</br>
+``TimeBaseRollingPolicy.java``
+
+```java
+    public void rollover() throws RolloverFailure {
+        String elapsedPeriodsFileName = timeBasedFileNamingAndTriggeringPolicy.getElapsedPeriodsFileName();
+        String elapsedPeriodStem = FileFilterUtil.afterLastSlash(elapsedPeriodsFileName);
+        if (compressionMode == CompressionMode.NONE) {
+            if (getParentsRawFileProperty() != null) {
+                renameUtil.rename(getParentsRawFileProperty(), elapsedPeriodsFileName);
+            } // else { nothing to do if CompressionMode == NONE and parentsRawFileProperty == null }
+        } else {
+            if (getParentsRawFileProperty() == null) {
+                compressionFuture = compressor.asyncCompress(elapsedPeriodsFileName, elapsedPeriodsFileName, elapsedPeriodStem);
+            } else {
+                compressionFuture = renamedRawAndAsyncCompress(elapsedPeriodsFileName, elapsedPeriodStem);
+            }
+        }
+		  //默认配置下logback会为我们初始化好archiveRemover
+        if (archiveRemover != null) {
+            Date now = new Date(timeBasedFileNamingAndTriggeringPolicy.getCurrentTime());
+            //archiveRemover会异步清理过期归档文件
+            cleanUpFuture = archiveRemover.cleanAsynchronously(now);
+        }
+    }
+```
+
+``TimeBasedArchiveRemover.java``
+
+```java
+    public Future<?> cleanAsynchronously(Date now) {
+    	  //新建清理任务类
+        ArhiveRemoverRunnable runnable = new ArhiveRemoverRunnable(now);
+        ExecutorService executorService = context.getScheduledExecutorService();
+        //异步执行
+        Future<?> future = executorService.submit(runnable);
+        return future;
+    }
+
+    public class ArhiveRemoverRunnable implements Runnable {
+        Date now;
+
+        ArhiveRemoverRunnable(Date now) {
+            this.now = now;
+        }
+
+        @Override
+        public void run() {
+            //按照maxHistory清理历史归档文件
+            clean(now);
+            if (totalSizeCap != UNBOUND_TOTAL_SIZE && totalSizeCap > 0) {
+                //按照totalSizeCap清理历史归档文件
+                capTotalSize(now);
+            }
+        }
+    }
+
+```
