--- a/_posts/2017-03-12-activemq.md
+++ b/_posts/2017-03-12-activemq.md
@@ -6,21 +6,21 @@ description: Activemq, Spring
 keywords: Java, Activemq, Apring
 ---
 
-## 1. 简介
+### 1. 简介
 
    TODO
 
-## 2. 发消息
+### 2. 发消息
    
    TODO
 
-## 3. 接受消息
+### 3. 接受消息
 
-### 3.1 异步接受消息
+#### 3.1 异步接受消息
 
-现在业务上基本上都是异步接受消息，而不是同步拉取，这里先说前者，后者如用再补充
+现在业务上基本上都是异步接受消息，而不是同步拉取，这里先说前者，后者如用再补充.
 
-如果是xml配置，需要在配置文件里加入jmx的schema，如下所示
+如果是xml配置，需要在配置文件里加入jmx的schema，如下所示:
 
 ```xml
     xmlns:jms="http://www.springframework.org/schema/jms"
@@ -29,9 +29,9 @@ keywords: Java, Activemq, Apring
         http://www.springframework.org/schema/jms/spring-jms.xsd">
 ```
 
-此ns里有异步接受消息的监听器容器标签 ``<listener-container/>``。
+此ns里有异步接受消息的监听器容器标签 ``<listener-container/>``
 
-顾名思义，它是监听器 ``<listener>`` 的容器，简易配置如下所示
+顾名思义，它是监听器 ``<listener>`` 的容器，简易配置如下所示:
 
 ```xml
     <jms:listener-container>
@@ -39,9 +39,9 @@ keywords: Java, Activemq, Apring
     </jms:listener-container>
 ```
 
-但``<listener-container/>`` 和 ``<listener>`` 这两个标签的属性有很多，充分掌握其含义，才能在复杂的业务中灵活配置
+但``<listener-container/>`` 和 ``<listener>`` 这两个标签的属性有很多，充分掌握其含义，才能在复杂的业务中灵活配置. 下面详细介绍一下：
 
-#### <listener>的属性
+##### \<listener\>的属性
 
 | Attribute        | Description           |
 | ------------- | ------------- |
