--- a/_posts/2017-03-12-activemq.md
+++ b/_posts/2017-03-12-activemq.md
@@ -1,13 +1,3 @@
-{% highlight ruby %}
-def show
-  @widget = Widget(params[:id])
-  respond_to do |format|
-    format.html # show.html.erb
-    format.json { render json: @widget }
-  end
-end
-{% endhighlight %}
-
 ---
 layout: post
 title: Spring接入Activemq配置详解
@@ -32,22 +22,22 @@ keywords: Java, Activemq, Apring
 
 如果是xml配置，需要在配置文件里加入jmx的schema，如下所示:
 
-```xml
+{% highlight xml %}
     xmlns:jms="http://www.springframework.org/schema/jms"
     xsi:schemaLocation="
         http://www.springframework.org/schema/jms 
         http://www.springframework.org/schema/jms/spring-jms.xsd">
-```
+{% endhighlight %}
 
 此ns里有异步接受消息的监听器容器标签 ``<listener-container/>``
 
 顾名思义，它是监听器 ``<listener>`` 的容器，简易配置如下所示:
 
-```xml
+{% highlight xml %}
     <jms:listener-container>
         <jms:listener destination="queue.orders" ref="orderService" />
     </jms:listener-container>
-```
+{% endhighlight %}
 
 但``<listener-container/>`` 和 ``<listener>`` 这两个标签的属性有很多，充分掌握其含义，才能在复杂的业务中灵活配置. 下面详细介绍一下：
 
