--- a/_posts/2017-03-12-activemq.md
+++ b/_posts/2017-03-12-activemq.md
@@ -22,22 +22,24 @@ keywords: Java, Activemq, Apring
 
 如果是xml配置，需要在配置文件里加入jmx的schema，如下所示:
 
-{% highlight xml %}
-    xmlns:jms="http://www.springframework.org/schema/jms"
-    xsi:schemaLocation="
-        http://www.springframework.org/schema/jms 
-        http://www.springframework.org/schema/jms/spring-jms.xsd">
-{% endhighlight %}
+```xml
+<beans xmlns:jms="http://www.springframework.org/schema/jms"
+       xsi:schemaLocation="
+            http://www.springframework.org/schema/jms 
+            http://www.springframework.org/schema/jms/spring-jms.xsd">
+       <!-- bean definitions here -->
+</beans>
+```
 
 此ns里有异步接受消息的监听器容器标签 ``<listener-container/>``
 
 顾名思义，它是监听器 ``<listener>`` 的容器，简易配置如下所示:
 
-{% highlight xml %}
-    <jms:listener-container>
-        <jms:listener destination="queue.orders" ref="orderService" />
-    </jms:listener-container>
-{% endhighlight %}
+```xml
+<jms:listener-container>
+    <jms:listener destination="queue.orders" ref="orderService" />
+</jms:listener-container>
+```
 
 但``<listener-container/>`` 和 ``<listener>`` 这两个标签的属性有很多，充分掌握其含义，才能在复杂的业务中灵活配置. 下面详细介绍一下：
 
@@ -45,6 +47,37 @@ keywords: Java, Activemq, Apring
 
 | Attribute        | Description           |
 | ------------- | ------------- |
-| col 3 is      | right-aligned |
-| col 2 is      | centered      |
-| zebra stripes | are neat      |
+| id            | Bean的名称     |
+| destination(required)       | 此Listener监听的``queue``/``topic``的名称      |
+| ref(required) | 监听器的消息处理Bean的id      |
+| method | 消息处理Bean中的消息处理方法名称 如果``ref``指向的是``MessageListener`` or ``SessionAwareMessageListener``, method可忽略       |
+| response-destination | 接收响应消息(如有)的``queue``/``topic``的名称    |
+| subscription | Durable subscription(如有)的名称      |
+| selector | 消息选择器      |
+| concurrency | 并发的 会话/消费者 数量      |
+
+
+##### \<listener-container\>的属性
+
+| Attribute        | Description           |
+| ------------- | ------------- |
+| container-type      | Bean的名称     |
+| container-class       | 此Listener监听的``queue``/``topic``的名称      |
+| factory-id | 监听器的消息处理Bean的id      |
+| connection-factory | 消息处理Bean中的消息处理方法名称 如果``ref``指向的是``MessageListener`` or ``SessionAwareMessageListener``, method可忽略       |
+| task-executor | 接收响应消息(如有)的``queue``/``topic``的名称    |
+| destination-resolver | Durable subscription(如有)的名称      |
+| message-converter | 消息选择器      |
+| error-handler | 并发的 会话/消费者 数量      |
+| destination-type | 并发的 会话/消费者 数量      |
+| response-destination-type | 并发的 会话/消费者 数量      |
+| client-id | 并发的 会话/消费者 数量      |
+| cache | 并发的 会话/消费者 数量      |
+| acknowledge | 并发的 会话/消费者 数量      |
+| transaction-manager | 并发的 会话/消费者 数量      |
+| concurrency | 并发的 会话/消费者 数量      |
+| prefetch | 并发的 会话/消费者 数量      |
+| receive-timeout | 并发的 会话/消费者 数量      |
+| back-off | 并发的 会话/消费者 数量      |
+| recovery-interval | 并发的 会话/消费者 数量      |
+| phase | 并发的 会话/消费者 数量      |
