--- a/_posts/2017-03-12-activemq.md
+++ b/_posts/2017-03-12-activemq.md
@@ -24,8 +24,7 @@ keywords: Java, Activemq, Apring
 
 ```xml
 <beans xmlns:jms="http://www.springframework.org/schema/jms"
-       xsi:schemaLocation="
-            http://www.springframework.org/schema/jms 
+       xsi:schemaLocation="http://www.springframework.org/schema/jms 
             http://www.springframework.org/schema/jms/spring-jms.xsd">
        <!-- bean definitions here -->
 </beans>
@@ -61,23 +60,23 @@ keywords: Java, Activemq, Apring
 
 | Attribute        | Description           |
 | ------------- | ------------- |
-| container-type      | Bean的名称     |
-| container-class       | 此Listener监听的``queue``/``topic``的名称      |
-| factory-id | 监听器的消息处理Bean的id      |
-| connection-factory | 消息处理Bean中的消息处理方法名称 如果``ref``指向的是``MessageListener`` or ``SessionAwareMessageListener``, method可忽略       |
-| task-executor | 接收响应消息(如有)的``queue``/``topic``的名称    |
-| destination-resolver | Durable subscription(如有)的名称      |
-| message-converter | 消息选择器      |
-| error-handler | 并发的 会话/消费者 数量      |
-| destination-type | 并发的 会话/消费者 数量      |
-| response-destination-type | 并发的 会话/消费者 数量      |
-| client-id | 并发的 会话/消费者 数量      |
-| cache | 并发的 会话/消费者 数量      |
-| acknowledge | 并发的 会话/消费者 数量      |
-| transaction-manager | 并发的 会话/消费者 数量      |
-| concurrency | 并发的 会话/消费者 数量      |
-| prefetch | 并发的 会话/消费者 数量      |
-| receive-timeout | 并发的 会话/消费者 数量      |
-| back-off | 并发的 会话/消费者 数量      |
-| recovery-interval | 并发的 会话/消费者 数量      |
-| phase | 并发的 会话/消费者 数量      |
+| container-type      | Listener container的类型     |
+| container-class       | Listener container的实现类      |
+| factory-id | 对外暴露以此id为Name的 ``JmsListenerContainerFactory``       |
+| connection-factory | JMS ``ConnectionFactory`` 的引用       |
+| task-executor | 供JMS Listener 调用的 ``taskExecutor`` 的引用    |
+| destination-resolver | 解析 ``Destinations`` 的 ``DestinationResolver`` 的引用      |
+| message-converter | ``MessageConverter`` 的引用， 用于转换JMS的message到listener方法参数      |
+| error-handler | ``ErrorHandler`` 的引用，用于捕获在MessageListener执行过程中的运行异常      |
+| destination-type | 目标地址的类型 queue(默认) / topic      |
+| response-destination-type | 响应消息的目标地址类型      |
+| client-id | Listener container的clientId(需使用Durable subscription)      |
+| cache | JMS 资源的缓存级别      |
+| acknowledge | JMS 的确认模式：``auto``(默认) ``client`` ``dups-ok`` ``transacted``      |
+| transaction-manager | 当acknowledge选择``transacted``时， 可以指定外部的 ``PlatformTransactionManager`` 实现， 如不指定，则会激活本地事务     |
+| concurrency | 为容器中每个Listener指定并发的 会话/消费者 数量      |
+| prefetch | 预取到会话中的消息最大值      |
+| receive-timeout | 同步拉取消息(receive)的超时时间      |
+| back-off | ``BackOff`` 的引用， 用于计算两次尝试恢复之间的时间间隔       |
+| recovery-interval | 恢复的间隔时间      |
+| phase | 生命周期某时期      |
