--- a/_posts/2017-03-12-activemq.md
+++ b/_posts/2017-03-12-activemq.md
@@ -24,8 +24,7 @@ keywords: Java, Activemq, Apring
 
 ```xml
 <beans xmlns:jms="http://www.springframework.org/schema/jms"
-       xsi:schemaLocation="http://www.springframework.org/schema/jms 
-            http://www.springframework.org/schema/jms/spring-jms.xsd">
+       xsi:schemaLocation="http://www.springframework.org/schema/jms http://www.springframework.org/schema/jms/spring-jms.xsd">
        <!-- bean definitions here -->
 </beans>
 ```
