--- a/_posts/2017-03-12-activemq.md
+++ b/_posts/2017-03-12-activemq.md
@@ -79,3 +79,31 @@ keywords: Java, Activemq, Apring
 | back-off | ``BackOff`` 的引用， 用于计算两次尝试恢复之间的时间间隔       |
 | recovery-interval | 恢复的间隔时间      |
 | phase | 生命周期某时期      |
+
+##### \<listener-container\>的属性配置详解
+
+下边把我们关心的属性一一剖解：
+
+**1. container-type**
+
+可选项为simple和default, 目前Spring里的``MessageListenerContainer``有两个实现类，分别是``SimpleMessageListenerContainer`` 和 ``DefaultMessageListenerContainer``
+
+* SimpleMessageListenerContainer
+
+This is the simplest form of a message listener container. It creates a fixed number of JMS Sessions to invoke the listener, not allowing for dynamic adaptation to runtime demands.
+
+* DefaultMessageListenerContainer
+
+这个消息侦听器使用的最多。和 SimpleMessageListenerContainer 相反，这个子类可以动态适应运行时侯的要求，也可以参与事务管理。
+
+**2. connection-factory**
+
+连接工厂，这也是我们需要配置的Bean，后边会重点分析
+
+**3. task-executor**
+
+Spring 的 TaskExecutor(或 标准JDK Executor)的引用。 在``DefaultMessageListenerContainer``下默认是``SimpleAsyncTaskExecutor``，这个执行器的缺点是不会重用连接，也就是对于每个任务都需要新开启一个线程，执行完任务后会关闭它。
+
+A reference to a Spring TaskExecutor (or standard JDK 1.5 Executor) for executing JMS listener invokers. Default is a SimpleAsyncTaskExecutor in case of a DefaultMessageListenerContainer, using internally managed threads.
+
+**4. prefetch**
