--- a/_posts/2017-03-27-IntelliJ.md
+++ b/_posts/2017-03-27-IntelliJ.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: IntelliJ IDEA 使用技巧
-categories: Java
+categories: Tool
 description: Activemq, Spring
-keywords: Java, Activemq, Apring
+keywords: Tool, Java, Activemq, Spring
 ---
 
 ### 1. 引言
